src/app/app.component.scss
@import '../material-theme.scss';

$button-padding: 20px;
$board-padding: 5px;

header {
  background: $primary;
  color: white;
  font-size: 24px;
  font-weight: bold;
  // We add an extra 100px of space above the header so that the negative scroll on Apple devices
  // continues to show the header.
  margin-top: -100px;
  padding: 118px 0 18px 20px;
  margin-bottom: 10px;
  z-index: 20;
  position: relative;

  .settings-button {
    float: right;
    margin-top: -8px;
    padding-right: $button-padding;
  }
}

.config-slider {
  position: absolute;
  top: 0px;
  right: 0;
  z-index: 5;
  transform: translate3d(0,0,0);
  display: block;
}

.no-board-placeholder {
  height: 500px;
}

.board {
  padding: $board-padding;

  .board-button {
    float: right;
    padding-right: $button-padding - $board-padding;
  }
}

footer {
  margin-top: 12px;
  padding: 18px 24px;
  font-style: italic;
}

